--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <!DOCTYPE html>
-<title>ContactClip Ready! 👋</title>
-<h1>🚀 App Clip NFC Domain Active</h1>
-<p>Scan NFC tag → <b>https://ammotorsports24-create.github.io/contact</b></p>
+<title>Contact</title>
+<h1>Scan to add Ashton Elberg</h1>
